--- a/simulator.html
+++ b/simulator.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+f<!DOCTYPE html>
 <html lang="en" class="dark">
 <head>
     <meta charset="UTF-8">
@@ -248,7 +248,7 @@
                     </div>
 
                     <div class="flex items-center justify-between pt-2">
-                        <label for="demodulateSwitch" class="text-sm font-medium text-gray-300">Show Demodulation (LPF)</label>
+                        <label for="demodulateSwitch" class="text-sm font-medium text-gray-300">Show Demodulation </label>
                         <label class="relative inline-flex items-center cursor-pointer">
                             <input type="checkbox" id="demodulateSwitch" class="sr-only toggle-checkbox">
                             <div class="w-11 h-6 toggle-bg rounded-full p-1 flex items-center">
@@ -264,7 +264,7 @@
                 <div class="space-y-5">
                     <div class="slider-control">
                         <div class="flex justify-between items-end mb-1">
-                            <label for="amplitude" class="text-sm font-medium text-gray-300">Amplitude (A_m)</label>
+                            <label for="amplitude" class="text-sm font-medium text-gray-300">Amplitude </label>
                             <span id="amplitudeValue" class="text-sm font-medium text-green-400">1.0 V</span>
                         </div>
                         <input type="range" id="amplitude" min="0.5" max="3.0" step="0.1" value="1.0">
@@ -272,7 +272,7 @@
 
                     <div class="slider-control">
                         <div class="flex justify-between items-end mb-1">
-                            <label for="freqAnalog" class="text-sm font-medium text-gray-300">Analog Frequency (f_m)</label>
+                            <label for="freqAnalog" class="text-sm font-medium text-gray-300">Analog Frequency </label>
                             <span id="freqAnalogValue" class="text-sm font-medium text-green-400">2.0 Hz</span>
                         </div>
                         <input type="range" id="freqAnalog" min="1" max="10" step="0.5" value="2.0">
@@ -280,7 +280,7 @@
 
                     <div class="slider-control">
                         <div class="flex justify-between items-end mb-1">
-                            <label for="fsSamples" class="text-sm font-medium text-gray-300">Sampling Fs (f_s)</label>
+                            <label for="fsSamples" class="text-sm font-medium text-gray-300">Sampling Frequency </label>
                             <span id="fsSamplesValue" class="text-sm font-medium text-green-400">50 Hz</span>
                         </div>
                         <input type="range" id="fsSamples" min="10" max="100" step="5" value="50">
@@ -299,7 +299,7 @@
         
         <div class="graph-card rounded-xl p-4 sm:p-6">
             <h3 class="mb-4">
-                <i class="fas fa-chart-line text-blue-400 mr-2"></i> 1. Input Message Signal m(t)
+                <i class="fas fa-chart-line text-blue-400 mr-2"></i> 1. Input Message Signal 
             </h3>
             <div class="h-72 sm:h-80">
                 <canvas id="canvasInput"></canvas>
@@ -885,3 +885,4 @@
     </script>
 </body> 
 </html>
+
